@@ -14,7 +14,7 @@ import java.util.*;
 import javax.imageio.ImageIO;
 import javax.swing.*;
 public class FramePanel extends JPanel implements MouseListener, MouseMotionListener {
-    private BufferedImage cover, reroll, infoButton, bg, exitPic, leftArrow, rightArrow, birdBack, wheatToken, invertebrateToken, fishToken, fruitToken, rodentToken, Continue_Button, feederPic, Action_Button, Score_By_Round;
+    private BufferedImage cover, infoButton, bg, exitPic, leftArrow, rightArrow, birdBack, wheatToken, invertebrateToken, fishToken, fruitToken, rodentToken, Continue_Button, feederPic, Action_Button, Score_By_Round;
     private BufferedImage[] dicePics = new BufferedImage[6];
     private BufferedImage[] rulePics = new BufferedImage[12];
     private final ProgramState state;
@@ -89,12 +89,11 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             
     }
     
-    Bird currentBird;
-    boolean abilityFinished = false;
-    boolean selectingSeedInsect = false;
-
     @Override
-    public void mouseClicked(MouseEvent e) {}
+    public void mouseClicked(MouseEvent e) {
+      
+
+    }
     public void mousePressed(MouseEvent e) {
         int x = e.getX();
         int y = e.getY();
@@ -199,18 +198,13 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         for (int i=0;i<5;i++){
                             if (startSelections[i]) state.players[state.playing].addCardToHand(startOptions[i]);
                         }
-                        if (startSelections[5]) state.players[state.playing].addFood("fish");
-                        if (startSelections[6]) state.players[state.playing].addFood("seed"); //why doubleadded?
-                        if (startSelections[7]) state.players[state.playing].addFood("insect"); //why double added?
-                        if (startSelections[8]) state.players[state.playing].addFood("berry");
-                        if (startSelections[9]) state.players[state.playing].addFood("rat");
+                        if (startSelections[5]) state.players[state.playing].addFood(Food.FoodType.FISH, 1);
+                        if (startSelections[6]) state.players[state.playing].addFood(Food.FoodType.SEED, 1); //why doubleadded?
+                        if (startSelections[7]) state.players[state.playing].addFood(Food.FoodType.INSECT, 1); //why double added?
+                        if (startSelections[8]) state.players[state.playing].addFood(Food.FoodType.BERRY, 1);
+                        if (startSelections[9]) state.players[state.playing].addFood(Food.FoodType.RAT, 1);
                         if (startSelections[10]) state.players[state.playing].addBonus(bonusOptions[0]);
                         else state.players[state.playing].addBonus(bonusOptions[1]);
-
-                        //because seed and insect are double added for idk reasons
-                        state.players[state.playing].removeFood("seed");
-                        state.players[state.playing].removeFood("insect");
-                        
                         if (state.playing == 3) {state.CURRENTEVENT.add("Game"); state.playing = 0;}
                         else {
                             state.playing ++;
@@ -246,7 +240,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 // g.drawImage(Action_Button, 480, 120, 50 ,50, null);
                 if (x>=184 && x<=231 && y>=180 && y<=222) state.CURRENTEVENT.add("View Birds");
                 else if (x>=190 && x<=235 && y>=440 && y<=484) state.CURRENTEVENT.add("View Bonus");
-                else if (x>=37 && x<=83 && y>=683 && y<=726) state.CURRENTEVENT.add("View Feeder"); 
+                else if (x>=37 && x<=83 && y>=683 && y<=726) state.CURRENTEVENT.add("View Feeder");
                 else if (x>=508 && x<=589 && y>=22 && y<=86) state.CURRENTEVENT.add("Info");
                 else if (x>=1375 && x<=1425 && y>=615 && y<=665) state.CURRENTEVENT.add("View Draw Birds");
                 else if (x>=480 && x<=530 && y>=120 && y<=170) state.CURRENTEVENT.add("Play Bird");
@@ -265,6 +259,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             
             }case "View Draw Birds" ->{
                 if (x>=20 && x<=70 && y>=400 && y<=450) state.CURRENTEVENT.removeLast();
+                endTurn(ProgramState.PlayerAction.DRAW_CARDS);
                 repaint();
 
             }case "View Feeder" -> {
@@ -305,6 +300,58 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 // g2.drawRect(469, 403, 627-469, 637-403);
                 // g2.drawRect(470,650,626-470,866-650);
 
+<<<<<<< HEAD
+        // g2.drawRect(644, 155, 800-644, 392-155);
+        // g2.drawRect(644, 403, 800-644, 637-403);
+        // g2.drawRect(644,650,800-644,866-650);
+       
+        // g2.drawRect(815, 155, 969-815, 392-155);
+        // g2.drawRect(815, 403, 969-815, 637-403);
+        // g2.drawRect(815,650,969-815,866-650);
+
+        // g2.drawRect(985, 155, 1138-985, 392-155);
+        // g2.drawRect(985, 403, 1138-985, 637-403);
+        // g2.drawRect(985,650,1138-985,866-650);
+
+        // g2.drawRect(1152, 155, 1302-1152, 392-155);
+        // g2.drawRect(1152, 403, 1302-1152, 637-403);
+        // g2.drawRect(1152,650,1302-1152,866-650);
+        if(x>=470 && x<=628 && y>=155 && y<=392){ state.squaresClickedToPlayBird[0][0] = !state.squaresClickedToPlayBird[0][0]; state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
+        if(x>=469 && x<=627 && y>=403 && y<=637) {state.squaresClickedToPlayBird[1][0] = !state.squaresClickedToPlayBird[1][0]; state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";}
+        if(x>=470 && x<=626 && y>=650 && y<=866){ state.squaresClickedToPlayBird[2][0] = !state.squaresClickedToPlayBird[2][0];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
+
+        if(x>=644 && x<=800 && y>=155 && y<=392) {state.squaresClickedToPlayBird[0][1] = !state.squaresClickedToPlayBird[0][1];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
+        if(x>=644 && x<=800 && y>=403 && y<=637) {state.squaresClickedToPlayBird[1][1] = !state.squaresClickedToPlayBird[1][1];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";} 
+        if(x>=644 && x<=800 && y>=650 && y<=866) {state.squaresClickedToPlayBird[2][1] = !state.squaresClickedToPlayBird[2][1];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
+
+        if(x>=815 && x<=969 && y>=155 && y<=392){ state.squaresClickedToPlayBird[0][2] = !state.squaresClickedToPlayBird[0][2];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
+        if(x>=815 && x<=969 && y>=403 && y<=637){ state.squaresClickedToPlayBird[1][2] = !state.squaresClickedToPlayBird[1][2];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";} 
+        if(x>=815 && x<=969 && y>=650 && y<=866){ state.squaresClickedToPlayBird[2][2] = !state.squaresClickedToPlayBird[2][2];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
+        
+        if(x>=985 && x<=1138 && y>=155 && y<=392){ state.squaresClickedToPlayBird[0][3] = !state.squaresClickedToPlayBird[0][3];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
+        if(x>=985 && x<=1138 && y>=403 && y<=637) {state.squaresClickedToPlayBird[1][3] = !state.squaresClickedToPlayBird[1][3];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";} 
+        if(x>=985 && x<=1138 && y>=650 && y<=866) {state.squaresClickedToPlayBird[2][3] = !state.squaresClickedToPlayBird[2][3];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
+        
+        if(x>=1152 && x<=1302 && y>=155 && y<=392) {state.squaresClickedToPlayBird[0][4] = !state.squaresClickedToPlayBird[0][4];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
+        if(x>=1152 && x<=1302 && y>=403 && y<=637){ state.squaresClickedToPlayBird[1][4] = !state.squaresClickedToPlayBird[1][4];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";} 
+        if(x>=1152 && x<=1302 && y>=650 && y<=866){ state.squaresClickedToPlayBird[2][4] = !state.squaresClickedToPlayBird[2][4];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
+        repaint();
+            
+        }
+        case "Wait For Second Part Play Specific Bird" -> {
+            state.CURRENTEVENT.removeLast();
+            paintPlaySpecificBirdSecondPart(this.getGraphics());
+        }
+        case "Choose Bird" -> {
+            if (x>=20 && x<=70 && y>=400 && y<=450) state.CURRENTEVENT.removeLast();
+                else if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing].getCardsInHand().size()%showing)
+                    currentShowing++;
+                else if (x>=50 && x<=110 && y>=590 && y<=650 && currentShowing != 0) currentShowing--;
+                //(253,504)->(489,825)
+                //(504,504)->(740,825)
+                //(755,504)->(991,825)
+                //(100,504)->(1237,825)
+=======
                 // g2.drawRect(644, 155, 800-644, 392-155);
                 // g2.drawRect(644, 403, 800-644, 637-403);
                 // g2.drawRect(644,650,800-644,866-650);
@@ -335,79 +382,11 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 if(x>=985 && x<=1138 && y>=155 && y<=392){ state.squaresClickedToPlayBird[0][3] = !state.squaresClickedToPlayBird[0][3];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
                 if(x>=985 && x<=1138 && y>=403 && y<=637) {state.squaresClickedToPlayBird[1][3] = !state.squaresClickedToPlayBird[1][3];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";} 
                 if(x>=985 && x<=1138 && y>=650 && y<=866) {state.squaresClickedToPlayBird[2][3] = !state.squaresClickedToPlayBird[2][3];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
+>>>>>>> e5181e672eeeb8ccc794e20a81b70e3b166675f8
                 
                 if(x>=1152 && x<=1302 && y>=155 && y<=392) {state.squaresClickedToPlayBird[0][4] = !state.squaresClickedToPlayBird[0][4];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
                 if(x>=1152 && x<=1302 && y>=403 && y<=637){ state.squaresClickedToPlayBird[1][4] = !state.squaresClickedToPlayBird[1][4];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";} 
                 if(x>=1152 && x<=1302 && y>=650 && y<=866){ state.squaresClickedToPlayBird[2][4] = !state.squaresClickedToPlayBird[2][4];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
-                repaint();
-            }
-            case "Wait For Second Part Play Specific Bird" -> {
-                state.CURRENTEVENT.removeLast();
-                paintPlaySpecificBirdSecondPart(this.getGraphics());
-            }
-            case "Choose Bird" -> {
-                if (x>=20 && x<=70 && y>=400 && y<=450) state.CURRENTEVENT.removeLast();
-                else if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing].getCardsInHand().size()%showing)
-                    currentShowing++;
-                else if (x>=50 && x<=110 && y>=590 && y<=650 && currentShowing != 0) currentShowing--;
-                //(253,504)->(489,825)
-                //(504,504)->(740,825)
-                //(755,504)->(991,825)
-                //(100,504)->(1237,825)
-                
-                if(x>=253 && x<=489 && y>=504 && y<=825){
-                    out.println("Clicked first card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+0),state.habitatToPlayBird);
-                    state.players[state.playing].getCardsInHand().remove(currentShowing*showing+0);
-                    for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
-                    state.CURRENTEVENT.removeLast();
-                } else if ( x >= 504 && x <= 740 && y >= 504 && y <= 825 ) {
-                    out.println("Clicked Second card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+1),state.habitatToPlayBird);
-                    state.players[state.playing].getCardsInHand().remove(currentShowing*showing+1);
-                    for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
-                    state.CURRENTEVENT.removeLast();
-                } else if ( x >= 755 && x <= 991 && y >= 504 && y <= 825 ) {
-                    out.println("Clicked Third card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+2),state.habitatToPlayBird);
-                    state.players[state.playing].getCardsInHand().remove(currentShowing*showing+2);
-                    for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
-                    state.CURRENTEVENT.removeLast();
-                } else if ( x >= 1000 && x <= 1237 && y >= 504 && y <= 825 ) {
-                    out.println("Clicked Fourth card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+3),state.habitatToPlayBird);
-                    state.players[state.playing].getCardsInHand().remove(currentShowing*showing+3);
-                    state.CURRENTEVENT.removeLast();
-                }
-                    
-                    state.habitatToPlayBird = "";
-            
-
-                repaint();
-            }case "Ability" -> {
-                switch (currentBird.getAbility()){
-                    case "Gain 1 [seed] from the birdfeeder, if available. You may cache it on this bird." ->{
-                        if (x>=510 && x<=790 && y>=385 && y<=515) currentBird.cacheFood();
-                        else if (x>=810 && x<=1090 && y>=385 && y<=515) state.players[state.playing].addFood("seed");
-                    }
-                }
-            }case "Select Food" -> {
-                if (selectingSeedInsect){
-                    if (x>=510 && x<=790 && y>=385 && y<=515) state.players[state.playing].addFood("seed");
-                    else if (x>=810 && x<=1090 && y>=385 && y<=515) state.players[state.playing].addFood("insect");
-                    selectingSeedInsect = false;
-                }
-                else{
-                    if (feeder.canReroll() && x>=1176 && x<=1293 && y>=493 && y<=610) feeder.reRoll();
-                    for (int i=0;i<5;i++){
-                        if (x>=diceLocMap[i][0] && x<=diceLocMap[i][0]+90 && y>=diceLocMap[i][1] && y<=diceLocMap[i][1]+90){
-                            if (feeder.getDice().get(i).equals("seed insect")) selectingSeedInsect = true;
-                            else state.players[state.playing].addFood(feeder.getDice().get(i));
-                            feeder.getOutDice().add(feeder.getDice().remove(i));
-                        }
-                    }
-                    
-                }
                 repaint();
             }
         }
@@ -449,47 +428,21 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 case "Info" -> paintInfo(g);
                 case "View Draw Birds" -> paintViewDrawBirds(g);
                 case "View Feeder" -> paintViewFeeder(g);
-                case "Select Food" -> {
-                    paintViewFeeder(g);
-                    if (selectingSeedInsect) paintYesNo(g, "Yes for seed, No for insect");
-                }
                 case "Draw Birds" -> paintDrawBirds(g);
                 case "Score Round" -> paintScoreRound(g);
                 case "Play Bird" -> paintPlayBird(g);
                 case "Play Specific Bird" -> paintPlaySpecificBird(g);
                 case "Rules" -> paintRules(g);
-                case "Choose Bird" -> paintPlaySpecificBirdSecondPart(g);
-                case "Ability" ->{
-                    switch (currentBird.getAbility()){
-                        case "Gain 1 [seed] from the birdfeeder, if available. You may cache it on this bird." -> paintYesNo(g, "Cache 1 seed?");
-                    }
-                }
             }
             state.lock.notifyAll();
         }
     }
 
-    public void paintYesNo(Graphics g, String s){
-        switch (state.CURRENTEVENT.getLast()){
-            case "Game" -> paintGame(g);
-            case "Select Food" -> paintViewFeeder(g);
-        }
-        Graphics2D g2 = (Graphics2D)g;
-        g2.setStroke(new BasicStroke(5.5f));
-        g2.setColor(new Color(8, 130, 161)); //dark blue
-        g2.fillRect(500, 375, 600, 150);
-        g2.setColor(new Color(58, 197, 164)); //light blue
-        g2.drawRect(510, 385, 280, 130);
-        g2.drawRect(810, 385, 280, 130);
-        g.setFont(new Font("Arial", Font.BOLD, 35));
-        g.drawString(s, 800-10*s.length(), 355);
-        g.drawString("Yes", 600, 480);
-        g.drawString("No", 900, 480);
-    }
     public void paintScoreRound(Graphics g){
         g.drawImage(Score_By_Round, 0, 0, getWidth(), getHeight(), null);
     }
 
+<<<<<<< HEAD
     public void paintPlaySpecificBird(Graphics g){
         //     g2.drawRect(470, 155, 628-470, 392-155);
         // g2.drawRect(469, 403, 627-469, 637-403);
@@ -568,7 +521,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             if (counter %showing == 0) 
                 birdArrSplit.add(new ArrayList<Bird>());
             counter ++;
-            birdArrSplit.getLast().add(b);
+            birdArrSplit.get(birdArrSplit.size()-1).add(b);
         }
         if (state.players[state.playing].getCardsInHand().size()==0) return;
 
@@ -583,6 +536,8 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         
     }
 
+=======
+>>>>>>> e5181e672eeeb8ccc794e20a81b70e3b166675f8
     public void paintStart(Graphics g){
         Graphics2D g2 = (Graphics2D) g;
         // Smooth rendering
@@ -641,7 +596,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
     }
 
     //this is the paintrules method which will paint simple rules and not too advanced ones, Mia will do the advanced ones
-    public void paintRules(Graphics g){
+    /*public void paintRules(Graphics g){
         Graphics2D g2 = (Graphics2D) g;
         g2.setColor(new Color(40, 40, 60));
         g2.fillRect(0,0,getWidth(),getHeight());
@@ -670,7 +625,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             g2.setFont(new Font("SansSerif", Font.BOLD, 18));
             g2.drawString("Back", 55, 70);
         }} catch (Exception ignored) {}
-    }
+    }*/
 
     public void paintSelection(Graphics g){
         g.drawImage(bg, 0, 0, getWidth(), getHeight(), null);
@@ -785,7 +740,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             if (counter %showing == 0) 
                 birdArrSplit.add(new ArrayList<Bird>());
             counter ++;
-            birdArrSplit.getLast().add(b);
+            birdArrSplit.get(birdArrSplit.size()-1).add(b);
         }
 
         for (int i=0;i<birdArrSplit.get(currentShowing).size();i++){
@@ -824,6 +779,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         g2.drawRect(1152, 155, 1302-1152, 392-155);
         g2.drawRect(1152, 403, 1302-1152, 637-403);
         g2.drawRect(1152,650,1302-1152,866-650);
+        
         
     }
 
@@ -892,7 +848,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         for (int i=0;i<feeder.getOutDice().size();i++){
             g.drawImage(dicePics[feeder.getOutImageIndex(i)], diceLocMap[i][0]-520, diceLocMap[i][1], 90, 90, null);
         }
-        if (feeder.canReroll()) g.drawImage(reroll, 1176, 493, 117, 117,null);
         
     }
 
@@ -924,6 +879,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         if (rulePage != 11) g.drawImage(rightArrow, 1400, getHeight()/2, 70, 70, null);
        
     }
+    
 
     public void startSetUp(){
         try {
@@ -947,7 +903,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             Continue_Button = ImageIO.read(FramePanel.class.getResource("/assets/Continue_Button.png"));
             Action_Button = ImageIO.read(FramePanel.class.getResource("/assets/Action_Button.png"));
             Score_By_Round = ImageIO.read(FramePanel.class.getResource("/assets/score_by_round.png"));
-            reroll = ImageIO.read(FramePanel.class.getResource("/assets/cover_image.png")); //yet another placeholder
         } catch (Exception e) {
             out.println("Exception: "+e);
             out.println("Oops pics dont load");
@@ -1001,7 +956,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 Map<Integer, String> foodMap = new HashMap<Integer, String>();
                 String[] foodtypes = {"i", "s", "f", "b", "r", "","a"};
                 for (int i=13;i<20;i++) foodMap.put(i, foodtypes[i-13]);
-                ArrayList<String[]> foodArr = new ArrayList<String[]>();
+                ArrayList<Food.FoodType[]> foodArr = new ArrayList<Food.FoodType[]>();
                 ArrayList<String> foods = new ArrayList<String>();
                 //out.println("Food stuff instantiated");
                 if (items[20].equals("/")){
@@ -1011,7 +966,18 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
 
                     for (String fo: foods){
                         String[] foo = {fo};
-                        foodArr.add(foo);
+                        //convert foo to Food.FoodType[] then add to foodArr
+                        Food.FoodType[] foodFoo = new Food.FoodType[foo.length];
+                        for (int i=0;i<foo.length;i++){
+                            switch (foo[i]){
+                                case "i" -> foodFoo[i] = Food.FoodType.INSECT;
+                                case "s" -> foodFoo[i] = Food.FoodType.SEED;
+                                case "f" -> foodFoo[i] = Food.FoodType.FISH;
+                                case "b" -> foodFoo[i] = Food.FoodType.BERRY;
+                                case "r" -> foodFoo[i] = Food.FoodType.RAT;
+                            }
+                        }
+                        foodArr.add(foodFoo);
                     }
                     
                 }else{
@@ -1029,7 +995,17 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     String[] foox = new String[foo.size()];
                     for (int i=0;i<foo.size();i++) foox[i] = foo.get(i);
                     //out.println(Arrays.toString(foox));
-                    foodArr.add(foox);
+                    Food.FoodType[] foodFoods = new Food.FoodType[foox.length];
+                        for (int i=0;i<foox.length;i++){
+                            switch (foox[i]){
+                                case "i" -> foodFoods[i] = Food.FoodType.INSECT;
+                                case "s" -> foodFoods[i] = Food.FoodType.SEED;
+                                case "f" -> foodFoods[i] = Food.FoodType.FISH;
+                                case "b" -> foodFoods[i] = Food.FoodType.BERRY;
+                                case "r" -> foodFoods[i] = Food.FoodType.RAT;
+                            }
+                        }
+                    foodArr.add(foodFoods);
                 }
 
                 // Ability type stuff
@@ -1172,26 +1148,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         bonusOptions[1] = bonusArr.remove(0);
         
     }
-    
-
-    /*public void playAbility(Bird b){
-        if (!b.getAbilityType.equals("N")) return;
-
-        String ability = b.getAbility();
-        int p = state.playing;
-        if (ability.contains("You may cache it")){
-            
-        }else if (ability.contains("in their [wetland]")){
-            //implement player with fewest bird draw 1 card 
-        }else if (ability.contains("Tuck 1")){
-            if (ability.contains("draw 1")){
-                //implement draw 1 after cache 
-            }else if (ability.contains("lay 1 egg")){
-                //implement lay egg after cache 
-            }
-        }
-    }
-    */
 
 }
      
